# hero_camp

./: .gitignore  Makefile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
hero_camp/: asgi.py  settings.py
hero_camp/api/: deps.py  handlers.py  middlewares.py  responses.py  security.py
hero_camp/api/routes/: __init__.py  auth_routes.py
hero_camp/api/schemas/: __init__.py  auth_schemas.py  meta_schemas.py
hero_camp/db/: __init__.py
hero_camp/db/models/: base.py  user.py
hero_camp/db/repos/: __init__.py  crud_repo.py  user_repo.py
migrations/: env.py
migrations/versions/: 03842e36cc31_initial_revision.py
tests/: conftest.py
tests/api/: test_auth.py
